@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true

package engine {
    class actor {
    }
    class projectile {
    }
    class world {
    }
}

package geometry {
    class map_data {
    }
}

package combat {
    package weapons {
        class weapon {
        }
    }
}

package math {
    class vec2 {
    }
}

package assets {
    class texture_id << (D,#FF7700) typedef >>
}

package world_object {
    class weapon_pickup {
    }
}

package entities {

    class player {
        # weapons : std::vector<std::unique_ptr<combat::weapons::weapon>>
        # sensitivity : float
        # current_weapon_index : int
        # map_ref : geometry::map_data*
        # world_ref : engine::world*
        # collision_radius : float
        # walk_speed : float
        # sprint_speed : float
        + player(p : math::vec2 const, z : float const, tex : assets::texture_id const, is : float const, hp : float, shield : float, move_speed : float, sens : float)
        + update(dt : float) : void override
        + move(direction : math::vec2) : void
        + rotate(yaw : float) : void
        + shoot() : void
        + reload() : void
        + switch_weapons(index : int) : void
        + start_sprint() : void
        + stop_sprint() : void
        + resupply<WeaponT>(amount : int) : bool
        -- Friends --
        friend class world_object::weapon_pickup
        friend class game::game
    }

    class slug_projectile {
    }

    class plasma_projectile {
    }

    class monster {
        # target_ptr : engine::actor*
        # map_ref : geometry::map_data*
        # world_ref : engine::world*
        # attack_cooldown : float
        # attack_range : float
        # detection_radius : float
        # attack_damage : float
        # attack_cd_max : float
        # collision_radius : float
        # has_target() : bool const
        # dist_to_target() : float const
        # dir_to_target() : math::vec2 const
        # apply_wall_collision(new_pos : math::vec2&) : void const
        # move_toward_target(speed : float, dt : float) : void
        # move_away_from_target(speed : float, dt : float) : void
        # strafe(speed : float, dt : float) : void
        # melee_attack(damage : float) : void
        # ranged_attack(damage : float, tex : assets::texture_id, speed : float) : void
        + monster(p : math::vec2 const, z : float const, tex : assets::texture_id const, is : float const, hp : float, shield : float, move_speed : float, atk_range : float, det_radius : float, atk_dmg : float, atk_cd : float, target : engine::actor* = nullptr)
        + update(dt : float) : void override
        -- Friends --
        friend class game::game
    }

    package monsters {

        class monster_basic {
            + monster_basic(p : math::vec2 const, z : float const, target : engine::actor* = nullptr)
            + update(dt : float) : void override
        }

        class monster_all_rounder {
            - melee_mode : bool
            - melee_threshold : float
            + monster_all_rounder(p : math::vec2 const, z : float const)
            + update(dt : float) : void override
        }

        class monster_ranged {
            - preferred_dist : float
            + monster_ranged(p : math::vec2 const, z : float const)
            + update(dt : float) : void override
        }

        class monster_sniper {
            - shoot_interval : float
            - aim_timer : float
            + monster_sniper(p : math::vec2 const, z : float const)
            + update(dt : float) : void override
        }

        class monster_assault {
            - burst_size : int
            - burst_interval : float
            - burst_remaining : int
            - burst_timer : float
            - burst_cooldown : float
            - strafe_sign : float
            - strafe_timer : float
            + monster_assault(p : math::vec2 const, z : float const)
            + update(dt : float) : void override
        }

        class monster_magic {
            - charge_time : float
            - charge_timer : float
            - is_charging : bool
            - post_fire_cooldown : float
            - sidestep_timer : float
            - sidestep_sign : float
            + monster_magic(p : math::vec2 const, z : float const)
            + update(dt : float) : void override
        }

        class monster_Maly_Szybki {
            - is_dashing : bool
            - dash_timer : float
            - dash_cooldown : float
            + monster_Maly_Szybki(p : math::vec2 const, z : float const)
            + update(dt : float) : void override
        }

        class monster_elite_swift {
            - charge_speed : float
            - is_charging : bool
            - charge_timer : float
            - charge_cd : float
            - circle_angle : float
            - circle_radius : float
            + monster_elite_swift(p : math::vec2 const, z : float const)
            + update(dt : float) : void override
        }

        class monster_Duzy_Gruby {
            + monster_Duzy_Gruby(p : math::vec2 const, z : float const)
            + update(dt : float) : void override
        }

        class monster_elite_tank {
            - melee_mode : bool
            - melee_threshold : float
            - heavy_timer : float
            - heavy_cd : float
            + monster_elite_tank(p : math::vec2 const, z : float const)
            + update(dt : float) : void override
        }

        class monster_trapper {
            - max_traps : int
            - traps_placed : int
            - trap_timer : float
            - trap_interval : float
            - wander_timer : float
            - wander_sign : float
            + monster_trapper(p : math::vec2 const, z : float const)
            + update(dt : float) : void override
        }

        class monster_spawner {
            - max_spawns : int
            - current_spawns : int
            - spawn_interval : float
            - spawn_timer : float
            + monster_spawner(p : math::vec2 const, z : float const)
            + update(dt : float) : void override
        }

        class monster_boss {
            - current_phase : int
            - max_hp_val : float
            - ranged_cooldown : float
            - is_charging : bool
            - charge_timer : float
            - charge_cooldown : float
            - post_charge_stun : float
            - charge_dir : math::vec2
            - is_channeling : bool
            - channel_timer : float
            - flash_timer : float
            - phase3_debuffed : bool
            - minion_ids : std::vector<id_t>
            - wants_melee : bool
            - stance_timer : float
            - boss_map_ref : geometry::map_data*
            - hp_ratio() : float const
            - update_phase() : void
            - phase1_ai(dt : float, dist : float) : void
            - phase2_ai(dt : float, dist : float) : void
            - phase3_ai(dt : float, dist : float) : void
            - ranged_attack_slow() : void
            - melee_attack_burn() : void
            - start_charge() : void
            - update_charge(dt : float) : void
            - start_channel() : void
            - minions_alive() : bool const
            + monster_boss(p : math::vec2 const, z : float const)
            + channeling() : bool const
            + flash_phase() : float const
            + update(dt : float) : void override
            -- Friends --
            friend class game::game
        }
    }
}

'' Projectile Hierarchies
engine::projectile <|-- entities::slug_projectile
engine::projectile <|-- entities::plasma_projectile

'' Main Actor Hierarchies
engine::actor <|-- entities::player
engine::actor <|-- entities::monster

'' Monster Sub-Class Implementations
entities::monster <|-- entities::monsters::monster_basic
entities::monster <|-- entities::monsters::monster_all_rounder
entities::monster <|-- entities::monsters::monster_ranged
entities::monster <|-- entities::monsters::monster_sniper
entities::monster <|-- entities::monsters::monster_assault
entities::monster <|-- entities::monsters::monster_magic
entities::monster <|-- entities::monsters::monster_Maly_Szybki
entities::monster <|-- entities::monsters::monster_elite_swift
entities::monster <|-- entities::monsters::monster_Duzy_Gruby
entities::monster <|-- entities::monsters::monster_elite_tank
entities::monster <|-- entities::monsters::monster_trapper
entities::monster <|-- entities::monsters::monster_spawner
entities::monster <|-- entities::monsters::monster_boss

'' Dependencies
entities::player ..> combat::weapons::weapon
entities::player ..> geometry::map_data
entities::player ..> engine::world
entities::monster ..> engine::actor
entities::monster ..> geometry::map_data
entities::monster ..> engine::world
entities::monsters::monster_boss ..> geometry::map_data
entities::monsters::monster_boss ..> engine::world

@enduml
